--- a/NgoXuanLoc/test1.html
+++ b/NgoXuanLoc/test1.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>Warehouse Management</h1>
+            <h1>Warehouse</h1>
         </div>
         <nav>
             <ul>
@@ -22,16 +22,59 @@
             </ul>
         </nav>
         <nav>
-            <div class="search">
-                <input type="text" placeholder="Tìm kiếm..." class="search-input">
-                <button type="submit" class="search-button">Tìm kiếm</button>
-            </div>
             <div class="loginregister">
                 <a href="register.html"> <button class="register-button">Đăng ký</button></a>
                 <a href="login.html"><button class="login-button">Đăng nhập</button></a>
             </div>
         </nav>
     </header>
+    <main>
+        <div class="search">
+            <input type="text" placeholder="Tìm kiếm..." class="search-input">
+            <button type="submit" class="search-button">Tìm kiếm</button>
+        </div>
+        
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+
+        <!-- Slides -->
+        <div class="mySlides fade">
+            <img src="anh1.jpg" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+            <img src="anh2.jpg" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+            <img src="anh3.jpg" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+            <img src="anh4.jpg" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+            <img src="anh5.jpg" style="width:100%">
+        </div>
+
+        <!-- Navigation Buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+
+    <!-- Dots (small circles at the bottom) -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+    </div>
+
+    <script src="test1.js"></script>
+
+    </main>
     <footer>
         <p>&copy; 2024 Warehouse Management. All Rights Reserved.</p>
     </footer>
