--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -10,11 +10,14 @@
 <body>
     <header>
         <div class="logo">
-            <h1>Warehouse Management</h1>
+            <h1>Warehouse</h1>
         </div>
         <nav>
             <ul>
                 <li><a href="#" class="home">Home</a></li>
+                <li><a href="#">Supplier</a></li>
+                <li><a href="#">Customer</a></li>
+                <li><a href="#">Order</a></li>
             <div class="dropdown">
                 <li><a href="#">Inventory</a>
                     <div>
@@ -23,9 +26,8 @@
                     </div>
                 </li>
             </div>
-                <li><a href="#">Order</a></li>
-                <li><a href="#">Supplier</a></li>
-                <li><a href="#">Customer</a></li>
+                
+               
                 <li><a href="#">Reports</a></li>
                 <li><a href="#">Employee</a></li>
             </ul>
