--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -16,18 +16,21 @@
             <ul>
                 <li><a href="#" class="home">Home</a></li>
                 <li><a href="#">Supplier</a></li>
-                <li><a href="#">Customer</a></li>
+                <li><a href="#">Customer</a>
+                    <div class="">
+                        <a href="customerIN.html">Domestic</a>
+                        <a href="customerOUT.html">Foreign</a>
+                    </div>
+                </li>
                 <li><a href="#">Order</a></li>
             <div class="dropdown">
                 <li><a href="#">Inventory</a>
-                    <div>
+                    <div class="#">
                          <a href="inventoryIM.html">Import</a>
                          <a href="inventoryEX.html">Export</a>
                     </div>
                 </li>
             </div>
-                
-               
                 <li><a href="#">Reports</a></li>
                 <li><a href="#">Employee</a></li>
             </ul>
@@ -53,7 +56,7 @@
     </div>
 </main>
     <footer>
-        <p>&copy; 2024 Bản quyền thuộc về nhóm 3 CNTT4 K64 UTC.</p>
+        <p>&copy;Information technology - IT4 - From Univesity of Information and Communication.</p>
     </footer>
 </body>
 </html>
