--- a/DiepVanDinh/customerIN.html
+++ b/DiepVanDinh/customerIN.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domestic Customers</title>
-    <link rel="stylesheet" href="stylecustomer.css">
-</head>
+    <link rel="stylesheet" href="slytecustomer.css">
 <body>
     <h1>Domestic Customer</h1>
-    <div class="domestic">
+    <div class="form-container">
         <h2>Customer Details</h2>
-        <form id="domesticForm">
+        <form id="customerinForm">
             <!-- Customer Code -->
             <label for="customerCode">Customer Code:</label>
             <input type="text" id="customerCode" name="customerCode" required>
@@ -24,22 +23,21 @@
             <!-- Contact Number -->
             <label for="contactNumber">Contact Number:</label>
             <input type="tel" id="contactNumber" name="contactNumber" required>
-            <br><br>
 
             <!-- Gmail -->
             <label for="gmail">Gmail:</label>
             <input type="email" id="gmail" name="gmail" required>
-            <br><br>
 
             <!-- Address -->
             <label for="address">Address:</label>
             <textarea id="address" name="address" required></textarea>
-            <br><br>
 
             <!-- Delivery Address -->
             <label for="deliveryDate">Delivery Date:</label>
             <input type="date" id="deliveryDate" name="deliveryDate" required>
+            <button type="button" onclick="customerIN()">Add</button>
         </form>
     </div>
+    <script src="customer.js"></script>
 </body>
 </html>
