Dang dong bo duong dan
Duong dan trang chu sang cac trang tac vu dang o muc base

--- a/DiepVanDinh/customer/customerIN.html
+++ b/DiepVanDinh/customer/customerIN.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domestic Customers</title>
+    <link rel="stylesheet" href="layoutsmain.css">
     <link rel="stylesheet" href="slytecustomer.css">
 <body>
+    <header>
+        <div class="logo">
+            <h1>Warehouse</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#" class="home">Home</a></li>
+                <li><a href="#">Supplier</a></li>
+                <li><a href="#">Customer</a>
+                    <div class="">
+                        <a href="customerIN.html">Domestic</a>
+                        <a href="customerOUT.html">Foreign</a>
+                    </div>
+                </li>
+                <li><a href="#">Order</a></li>
+            <div class="dropdown">
+                <li><a href="#">Inventory</a>
+                    <div class="#">
+                         <a href="inventoryIM.html">Import</a>
+                         <a href="inventoryEX.html">Export</a>
+                    </div>
+                </li>
+            </div>
+                <li><a href="#">Reports</a></li>
+                <li><a href="#">Employee</a></li>
+            </ul>
+        </nav>
+        <div class=""></div>
+        <nav>
+
+            <!--đăng nhập/đăng ký-->
+            <div class="loginregister">
+                <a href="register.html"> <button class="register-button">Đăng ký</button></a>
+                <a href="login.html"><button class="login-button">Đăng nhập</button></a>
+            </div>
+        </nav>
+    </header>
+    <main>
     <h1>Domestic Customer</h1>
     <div class="form-container">
         <h2>Customer Details</h2>
@@ -39,5 +78,9 @@
         </form>
     </div>
     <script src="customer.js"></script>
+</main>
 </body>
+    <footer>
+        <p>&copy;Information technology - IT4 - From Univesity of Information and Communication.</p>
+    </footer>
 </html>
