--- a/DiepVanDinh/inventoryIM.html
+++ b/DiepVanDinh/inventoryIM.html
@@ -9,14 +9,14 @@
 <body>
     <header>
         <div class="logo">
-            <h1>Warehouse</h1>
+            <img src="imagewarehouse/logokho.jpg" alt="Khong hien thi" class="logo-img">
         </div>
         <nav>
             <ul>
                 <li><a href="#" class="home">Home</a></li>
                 <li><a href="#">Supplier</a></li>
                 <li><a href="#">Customer</a>
-                    <div class="">
+                    <div class="customer-menu">
                         <a href="customerIN.html">Domestic</a>
                         <a href="customerOUT.html">Foreign</a>
                     </div>
@@ -24,7 +24,7 @@
                 <li><a href="#">Order</a></li>
             <div class="dropdown">
                 <li><a href="#">Inventory</a>
-                    <div class="#">
+                    <div class="inventory-menu">
                          <a href="inventoryIM.html">Import</a>
                          <a href="inventoryEX.html">Export</a>
                     </div>
@@ -39,8 +39,8 @@
 
             <!--đăng nhập/đăng ký-->
             <div class="loginregister">
-                <a href="register.html"> <button class="register-button">Đăng ký</button></a>
-                <a href="login.html"><button class="login-button">Đăng nhập</button></a>
+                <a href="register.html"> <button class="register-button">Register</button></a>
+                <a href="login.html"><button class="login-button">Login</button></a>
             </div>
         </nav>
     </header>
