Da sua xong phan tim kiem
Khong can m nua loc a

Co-Authored-By: Ngo Xuan Loc <loc231220831@lms.utc.edu.vn>

--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -15,7 +15,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#" class="home">Home</a></li>
+                <li><a href="./warehousemain.html" class="home">Home</a></li>
                 <li><a href="#">Supplier</a></li>
                 <li><a href="#">Customer</a>
                     <div class="customer-menu">
@@ -48,10 +48,11 @@
     </header>
 <main>
     <!--tìm kiếm-->
+
     <div class="search">
                 <input type="text" placeholder="Search..." class="search-input">
                 <button type="submit" class="search-button">Search</button>
-            </div>
+    </div> 
     <div class="background">
         <img src="kho1.jpg" alt="">
     </div>
