--- a/NgoXuanLoc/test1.html
+++ b/NgoXuanLoc/test1.html
@@ -36,34 +36,29 @@
         
     <!-- Slideshow container -->
     <div class="slideshow-container">
-
         <!-- Slides -->
         <div class="mySlides fade">
-            <img src="anh1.jpg" style="width:100%">
+            <img src="anh1.jpg" alt="ao1" style="width:100%">
         </div>
 
         <div class="mySlides fade">
-            <img src="anh2.jpg" style="width:100%">
+            <img src="anh2.jpg" alt="ao1" style="width:100%">
         </div>
 
         <div class="mySlides fade">
-            <img src="anh3.jpg" style="width:100%">
+            <img src="anh3.jpg" alt="ao1" style="width:100%">
         </div>
 
         <div class="mySlides fade">
-            <img src="anh4.jpg" style="width:100%">
+            <img src="anh4.jpg" alt="ao1" style="width:100%">
         </div>
 
         <div class="mySlides fade">
-            <img src="anh5.jpg" style="width:100%">
+            <img src="anh5.jpg" alt="ao1" style="width:100%">
         </div>
-
-        <!-- Navigation Buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-
-    <!-- Dots (small circles at the bottom) -->
     <div style="text-align:center">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
