--- a/NgoXuanLoc/test1.html
+++ b/NgoXuanLoc/test1.html
@@ -66,9 +66,40 @@
         <span class="dot" onclick="currentSlide(4)"></span>
         <span class="dot" onclick="currentSlide(5)"></span>
     </div>
-
     <script src="test1.js"></script>
-
+        <!--6 anh mau-->
+    <div class="product-container">
+        <div class="product">
+            <img src="ao1.jpg" alt="Product 1">
+            <div class="product-name">Quần ống rộng cạp chun</div>
+            <div class="product-price">$100</div>
+        </div>
+        <div class="product">
+            <img src="ao2.jpg" alt="Product 2">
+            <div class="product-name">Áo lót không gọng nâng ngực</div>
+            <div class="product-price">$25</div>
+        </div>
+        <div class="product">
+            <img src="ao3.jpg" alt="Product 3">
+            <div class="product-name">Chân váy siu cute</div>
+            <div class="product-price">$199</div>
+        </div>
+        <div class="product">
+            <img src="ao4.jpg" alt="Product 4">
+            <div class="product-name">Váy công chúa</div>
+            <div class="product-price">$133</div>
+        </div>
+        <div class="product">
+            <img src="ao5.jpg" alt="Product 5">
+            <div class="product-name">Set đồ thể thao</div>
+            <div class="product-price">$99</div>
+        </div>
+        <div class="product">
+            <img src="ao6.jpg" alt="Product 6">
+            <div class="product-name">Quần đùi nữ</div>
+            <div class="product-price">$39</div>
+        </div>
+    </div>
     </main>
     <footer>
         <p>&copy; 2024 Warehouse Management. All Rights Reserved.</p>
