--- a/NgoXuanLoc/test1.html
+++ b/NgoXuanLoc/test1.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Warehouse Management Dashboard</title>
+    <title>Nhi xinh</title>
     <link rel="stylesheet" href="test1.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <h1>Warehouse</h1>
+            <img src="logokho.jpg" alt="Khong hien thi" class="logo-img">
         </div>
         <nav>
             <ul>
