--- a/NgoXuanLoc/test1.html
+++ b/NgoXuanLoc/test1.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logokho.jpg" alt="Khong hien thi" class="logo-img">
+            <a href="test1.html"><img src="logokho.jpg" alt="Khong hien thi" class="logo-img"></a>
         </div>
         <nav>
             <ul>
-                <li><a href="#" class="home">Home</a></li>
+                <li><a href="test1.html" class="home">Home</a></li>
                 <li><a href="#">Sản phẩm</a></li>
                 <li><a href="#">Đơn hàng của tôi</a></li>
                 <li><a href="#">Giỏ hàng</a></li>
@@ -38,28 +38,28 @@
     <div class="slideshow-container">
         <!-- Slides -->
         <div class="mySlides fade">
-            <img src="anh1.jpg" alt="ao1" style="width:100%">
+            <img src="anh1.jpg" alt="ao1">
         </div>
 
         <div class="mySlides fade">
-            <img src="anh2.jpg" alt="ao1" style="width:100%">
+            <img src="anh2.jpg" alt="ao1">
         </div>
 
         <div class="mySlides fade">
-            <img src="anh3.jpg" alt="ao1" style="width:100%">
+            <img src="anh3.jpg" alt="ao1">
         </div>
 
         <div class="mySlides fade">
-            <img src="anh4.jpg" alt="ao1" style="width:100%">
+            <img src="anh4.jpg" alt="ao1">
         </div>
 
         <div class="mySlides fade">
-            <img src="anh5.jpg" alt="ao1" style="width:100%">
+            <img src="anh5.jpg" alt="ao1">
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-    <div style="text-align:center">
+    <div class="dottt">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
@@ -70,33 +70,33 @@
         <!--6 anh mau-->
     <div class="product-container">
         <div class="product">
-            <img src="ao1.jpg" alt="Product 1">
-            <div class="product-name">Quần ống rộng cạp chun</div>
+            <img src="aoquan/ao1.jpg" alt="Product 1">
+            <div class="product-name"><a href="ao1.html">Quần què</a></div>
             <div class="product-price">$100</div>
         </div>
         <div class="product">
-            <img src="ao2.jpg" alt="Product 2">
-            <div class="product-name">Áo lót không gọng nâng ngực</div>
+            <img src="aoquan/ao2.jpg" alt="Product 2">
+            <div class="product-name"><a href="ao2.html">Áo lót không gọng</a></div>
             <div class="product-price">$25</div>
         </div>
         <div class="product">
-            <img src="ao3.jpg" alt="Product 3">
-            <div class="product-name">Chân váy siu cute</div>
+            <img src="aoquan/ao3.jpg" alt="Product 3">
+            <div class="product-name"><a href="ao3.html">Set công chúa</a></div>
             <div class="product-price">$199</div>
         </div>
         <div class="product">
-            <img src="ao4.jpg" alt="Product 4">
-            <div class="product-name">Váy công chúa</div>
+            <img src="aoquan/ao4.jpg" alt="Product 4">
+            <div class="product-name"><a href="ao4.html">Chân váy cuti</a></div>
             <div class="product-price">$133</div>
         </div>
         <div class="product">
-            <img src="ao5.jpg" alt="Product 5">
-            <div class="product-name">Set đồ thể thao</div>
+            <img src="aoquan/ao5.jpg" alt="Product 5">
+            <div class="product-name"><a href="ao5.html">Set thể thao nữ</a></div>
             <div class="product-price">$99</div>
         </div>
         <div class="product">
-            <img src="ao6.jpg" alt="Product 6">
-            <div class="product-name">Quần đùi nữ</div>
+            <img src="aoquan/ao6.jpg" alt="Product 6">
+            <div class="product-name"><a href="ao6.html">Quần đùi nữ</a></div>
             <div class="product-price">$39</div>
         </div>
     </div>
