Đang đợi Ngọc làm nốt bảng, lưu trữ
Đang sửa file customer và report

--- a/DiepVanDinh/inventory.html
+++ b/DiepVanDinh/inventory.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lý kho</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="stylesinventory.css"> -->
 
 </head>
 
@@ -36,7 +36,7 @@
                             <li><a class="dropdown-item" href="inventory.html">Tồn kho</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Báo cáo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Nhân sự</a></li>
                 </ul>
                 <div class="d-flex ms-auto">
@@ -188,5 +188,8 @@
     <script src="script.js"></script>
 
 </body>
-
+    <!-- Footer -->
+    <footer class="bg-light text-center py-3 mt-4">
+        <p>&copy; Information Technology - IT4 - University of Information and Communication</p>
+    </footer>
 </html>
