--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
 <body>
+    <!-- Khong dung lo go nua -->
     <!-- Header with Logo -->
     <!-- <div class="container-fluid py-3">
         <div class="row">
@@ -15,7 +16,7 @@
             </div>
         </div> -->
 
-    <!-- Navigation Menu -->
+    <!-- Navigation Menu: Quan ly menu -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">   
             <a class="navbar-brand" href="./warehousemain.html">Warehouse</a>
@@ -41,7 +42,7 @@
                             <li><a class="dropdown-item" href="inventory.html">Tồn kho</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Báo cáo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Nhân sự</a></li>
                 </ul>
                 <div class="d-flex ms-auto">
