--- a/NgoXuanLoc/test1.html
+++ b/NgoXuanLoc/test1.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="test1.html" class="home">Home</a></li>
-                <li><a href="#">Sản phẩm</a></li>
-                <li><a href="#">Đơn hàng của tôi</a></li>
+                <li><a href="sanpham.html">Sản phẩm</a></li>
+                <li><a href="#">Đơn hàng</a></li>
                 <li><a href="#">Giỏ hàng</a></li>
                 <li><a href="#">Thanh toán</a></li>
                 <li><a href="#">Hỗ trợ khách hàng</a></li>
@@ -33,7 +33,6 @@
             <input type="text" placeholder="Tìm kiếm..." class="search-input">
             <button type="submit" class="search-button">Tìm kiếm</button>
         </div>
-        
     <!-- Slideshow container -->
     <div class="slideshow-container">
         <!-- Slides -->
