--- a/DiepVanDinh/login.html
+++ b/DiepVanDinh/login.html
@@ -3,27 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng ký tài khoản</title>
-    <link rel="stylesheet" href="login.css">
+    <title>Login</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="login.css">  Your CSS file -->
+    <script src="checkvalid.js"></script>
 </head>
 <body>
     <div class="container">
-        <form class="register-form">
-            <h2>Đăng nhập </h2>
-            <!-- Email/số điện thoại -->
+        <form class="register-form" method="post" action="#">  <!-- Replace '#' with your server-side script -->
+            <h2>Login</h2>
             <div class="form-group">
-                <label for="email-phone">Email/Số điện thoại:</label>
-                <input type="text" id="email-phone" name="email-phone" placeholder="Nhập email hoặc số điện thoại" required>
+                <label for="email-phone">Email/Phone:</label>
+                <input type="text" class="form-control" id="email-phone" name="email-phone" placeholder="Enter email or phone" required>
             </div>
-            <!-- Mật khẩu -->
             <div class="form-group">
-                <label for="password">Mật khẩu:</label>
-                <input type="password" id="password" name="password" placeholder="Nhập mật khẩu" required>
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
             </div>
-            <!-- Đăng nhập -->
-            <button type="submit" class="login-button">Đăng nhập</button>
-            <!-- Đăng ký -->
-            <p class="login-link">Chưa có tài khoản? <a href="register.html">Đăng ký</a></p>
+            <button type="submit" class="btn btn-primary login-button">Login</button>
+            <p class="login-link">Don't have an account? <a href="register.html">Register</a></p>
         </form>
     </div>
 </body>
