--- a/DiepVanDinh/register.html
+++ b/DiepVanDinh/register.html
@@ -3,44 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng ký tài khoản</title>
-    <link rel="stylesheet" href="register.css">
+    <title>Register</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="register.css"> Your CSS file -->
+    <script src="checkvalid.js"></script>
 </head>
 <body>
     <div class="container">
-        <form class="register-form">
-            <h2>Đăng ký tài khoản</h2>
-
-            <!-- Tên đầy đủ -->
+        <form class="register-form" onsubmit="return validform(this)" method="post" action="#"> <!-- Replace '#' with your server-side script -->
+            <h2>Register</h2>
             <div class="form-group">
-                <label for="fullname">Họ và tên:</label>
-                <input type="text" id="fullname" name="fullname" placeholder="Nhập họ và tên" required>
+                <label for="fullname">Full Name:</label>
+                <input type="text" class="form-control" id="fullname" name="fullname" placeholder="Enter full name" required>
             </div>
-
-            <!-- Email -->
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Nhập email" required>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required>
             </div>
-            <!-- Số điện thoại -->
             <div class="form-group">
-                <label for="phone">Số điện thoại:</label>
-                <input type="text" id="phone" name="phone" placeholder="Nhập số điện thoại" required>
+                <label for="phone">Phone:</label>
+                <input type="tel" class="form-control" id="phone" name="phone" placeholder="Enter phone number" required>
             </div>
-            <!-- Mật khẩu -->
             <div class="form-group">
-                <label for="password">Mật khẩu:</label>
-                <input type="password" id="password" name="password" placeholder="Nhập mật khẩu" required>
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
             </div>
-            <!-- Xác nhận mật khẩu -->
             <div class="form-group">
-                <label for="confirm_password">Xác nhận mật khẩu:</label>
-                <input type="password" id="confirm_password" name="confirm_password" placeholder="Xác nhận mật khẩu" required>
+                <label for="confirm_password">Confirm Password:</label>
+                <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="Confirm password" required>
             </div>
-            <!-- Nút đăng ký -->
-            <button type="submit" class="register-button">Đăng ký</button>
-            <!-- Đăng nhập -->
-            <p class="register-link">Đã có tài khoản? <a href="login.html">Đăng nhập</a></p>
+            <div class="form-group">
+                <label>Gender:</label><br>
+                <input type="radio" id="male" name="gender" value="male">
+                <label for="male">Male</label>
+                <input type="radio" id="female" name="gender" value="female">
+                <label for="female">Female</label>
+            </div>
+            <div class="form-group">
+                <label for="age">Age:</label>
+                <input type="text" class="form-control" id="age" name="age" required>
+            </div>
+            <button type="submit" class="btn btn-primary register-button">Register</button>
+            <p class="register-link">Already have an account? <a href="login.html">Login</a></p>
         </form>
     </div>
 </body>
