--- a/NPH/don-hang.html
+++ b/NPH/don-hang.html
@@ -104,5 +104,8 @@
     </div>
 
     <script src="scripts.js"></script> <!-- Link đến file JavaScript -->
+    <footer class="bg-light text-center py-3 mt-4">
+        <p>&copy; Information Technology - IT4 - University of Transport and Communications</p>
+    </footer>
 </body>
 </html>
