chỉnh 3 phần trong mục nhân sự

--- a/LongNguyenHo/phanquyen.html
+++ b/LongNguyenHo/phanquyen.html
@@ -13,10 +13,10 @@
         <form id="role-form">
             <label for="employee-name">Tên Nhân Viên:</label>
             <select id="employee-name">
-                <option value="Lộc ngu">Lộc ngu</option>
+                <option value="Ngô Xuân Lộc">Ngô Xuân Lộc</option>
                 <option value="Hồ Nguyên Long">Hồ Nguyên Long</option>
                 <option value="Đinh Văn Điệp">Đinh Văn Điệp</option>
-                <option value="Ngọc ngu">Ngọc ngu</option>
+                <option value="Hoàng Bá Ngọc">Hoàng Bá Ngọc</option>
                 <option value="Nguyễn Phúc Hiếu">Nguyễn Phúc Hiếu</option>
             </select>
 
