--- a/LongNguyenHo/warehousemain.html
+++ b/LongNguyenHo/warehousemain.html
@@ -44,11 +44,14 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
-                    <ul class="nav-item"><a class="nav-link" href="nhansu.html">Nhân sự</a>
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
+                        <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
                         <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
-                        <li><a class="dropdown-item" href="phanquyen">Phân quyền</a></li>
+                        <li><a class="dropdown-item" href="phanquyen.html">Phân quyền</a></li>
                         <li><a class="dropdown-item" href="nhansu.html">Tính lương</a></li>
-                    </ul>
+                        </ul>
+                    </li>
                 </ul>
                 <div class="d-flex ms-auto">
                     <!-- Register / Login Buttons -->
