--- a/LongNguyenHo/nhansu.html
+++ b/LongNguyenHo/nhansu.html
@@ -44,7 +44,14 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="nhansu.html">Nhân sự</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
+                            <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
+                            <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
+                            <li><a class="dropdown-item" href="phanquyen.html">Phân quyền</a></li>
+                            <li><a class="dropdown-item" href="nhansu.html">Tính lương</a></li>
+                            </ul>
+                        </li>
                 </ul>
                 <div class="d-flex ms-auto">
                     <!-- Register / Login Buttons -->
@@ -59,10 +66,10 @@
         <form id="attendance-form">
             <label for="employee-name">Tên Nhân Viên:</label>
             <select id="employee-name">
-                <option value="Lộc ngu">Lộc ngu</option>
+                <option value="Ngô Xuân Lộc">Ngô Xuân Lộc</option>
                 <option value="Hồ Nguyên Long">Hồ Nguyên Long</option>
                 <option value="Đinh Văn Điệp">Đinh Văn Điệp</option>
-                <option value="Ngọc ngu">Ngọc ngu</option>
+                <option value="Hoàng Bá Ngọc">Hoàng Bá Ngọc</option>
                 <option value="Nguyễn Phúc Hiếu">Nguyễn Phúc Hiếu</option>
             </select>
 
