--- a/NPH/don-hang.html
+++ b/NPH/don-hang.html
@@ -105,7 +105,7 @@
 
     <script src="scripts.js"></script> <!-- Link đến file JavaScript -->
     <footer class="bg-light text-center py-3 mt-4">
-        <p>&copy; Information Technology - IT4 - University of Transport and Communications</p>
+        <p>&copy; Information Technology - IT4 - <a href="https://www.utc.edu.vn/">University of Transport and Communications</a></p>
     </footer>
 </body>
 </html>
