--- a/DiepVanDinh/inventory.html
+++ b/DiepVanDinh/inventory.html
@@ -19,7 +19,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Tổng quan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
                         <ul class="dropdown-menu" aria-labelledby="customerDropdown">
@@ -37,12 +37,11 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Nhân sự</a></li>
+                    <li class="nav-item"><a class="nav-link" href="personnel.html">Nhân sự</a></li>
                 </ul>
                 <div class="d-flex ms-auto">
                     <!-- Register / Login Buttons -->
-                    <a href="register.html" class="btn btn-outline-primary me-2">Đăng ký</a>
-                    <a href="login.html" class="btn btn-outline-secondary">Đăng nhập</a>
+                    <a href="warehousemain.html" class="btn btn-outline-primary me-2">Đăng xuất</a>
                 </div>
             </div>
         </div>
@@ -176,11 +175,8 @@
                     </tbody>
                 </table>
             </div>
-
         </div>
-
     </div>
-
     <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 
