--- a/DiepVanDinh/login.html
+++ b/DiepVanDinh/login.html
@@ -9,19 +9,22 @@
     <script src="checkvalid.js"></script>
 </head>
 <body>
+    <div class="d-flex ms-auto">
+        <a href="warehousemain.html" class="btn btn-outline-primary me-2" style="margin: 10px 20px;">Trở về trang chủ</a>
+    </div>
     <div class="container">
         <form class="register-form" method="post" action="#">  <!-- Replace '#' with your server-side script -->
-            <h2>Login</h2>
+            <h2>Đăng nhập</h2>
             <div class="form-group">
-                <label for="email-phone">Email/Phone:</label>
+                <label for="email-phone">Email/Số điện thoại:</label>
                 <input type="text" class="form-control" id="email-phone" name="email-phone" placeholder="Enter email or phone" required>
             </div>
             <div class="form-group">
-                <label for="password">Password:</label>
+                <label for="password">Mật khẩu:</label>
                 <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
             </div>
-            <button type="submit" class="btn btn-primary login-button">Login</button>
-            <p class="login-link">Don't have an account? <a href="register.html">Register</a></p>
+            <button type="submit" class="btn btn-primary login-button">Đăng nhập</button>
+            <p class="login-link">Bạn chưa có tài khoản? <a href="register.html">Đăng ký</a></p>
         </form>
     </div>
 </body>
