--- a/DiepVanDinh/report.html
+++ b/DiepVanDinh/report.html
@@ -17,7 +17,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">Tổng quan</a></li>
+                <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
                     <ul class="dropdown-menu" aria-labelledby="customerDropdown">
@@ -39,8 +39,7 @@
             </ul>
             <div class="d-flex ms-auto">
                 <!-- Register / Login Buttons -->
-                <a href="register.html" class="btn btn-outline-primary me-2">Đăng ký</a>
-                <a href="login.html" class="btn btn-outline-secondary">Đăng nhập</a>
+                <a href="warehousemain.html" class="btn btn-outline-primary me-2">Đăng xuất</a>
             </div>
         </div>
     </div>
