--- a/DiepVanDinh/inventory.html
+++ b/DiepVanDinh/inventory.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lý kho</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="stylesinventory.css"> -->
+    <!-- <link rel="stylesheet" href="styles.css"> -->
 
 </head>
 
-<body>
+<body onload="renderListProduct()">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">   
             <a class="navbar-brand" href="./warehousemain.html">Warehouse</a>
@@ -36,12 +36,13 @@
                             <li><a class="dropdown-item" href="inventory.html">Tồn kho</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="personnel.html">Nhân sự</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Báo cáo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Nhân sự</a></li>
                 </ul>
                 <div class="d-flex ms-auto">
                     <!-- Register / Login Buttons -->
-                    <a href="warehousemain.html" class="btn btn-outline-primary me-2">Đăng xuất</a>
+                    <a href="register.html" class="btn btn-outline-primary me-2">Đăng ký</a>
+                    <a href="login.html" class="btn btn-outline-secondary">Đăng nhập</a>
                 </div>
             </div>
         </div>
@@ -104,7 +105,7 @@
                         <label for="importNote" class="form-label">Ghi chú:</label>
                         <textarea id="importNote" name="note" class="form-control"></textarea>
                     </div>
-                    <button type="button" class="btn btn-primary" onclick="nhapKho()">Nhập kho</button>
+                    <button type="button" class="btn btn-primary" onclick='nhapKho()'>Nhập kho</button>
                 </form>
             </div>
 
@@ -122,7 +123,10 @@
                         <label for="exportQuantity" class="form-label">Số lượng:</label>
                         <input type="number" id="exportQuantity" name="quantity" class="form-control" required>
                     </div>
-
+                    <div class="mb-3">
+                        <label for="importSupplier" class="form-label">Khách hàng:</label>
+                        <input type="text" id="exportSupplier" name="supplier" class="form-control" required>
+                    </div>
                     <div class="mb-3">
                         <label for="exportDate" class="form-label">Ngày xuất:</label>
                         <input type="date" id="exportDate" name="date" class="form-control" required>
@@ -131,7 +135,7 @@
                         <label for="exportNote" class="form-label">Ghi chú:</label>
                         <textarea id="exportNote" name="note" class="form-control"></textarea>
                     </div>
-                    <button type="button" class="btn btn-primary" onclick="xuatKho()">Xuất kho</button>
+                    <button type="button" class="btn btn-primary" onclick='xuatKho()'>Xuất kho</button>
                 </form>
 
             </div>
@@ -175,14 +179,14 @@
                     </tbody>
                 </table>
             </div>
+
         </div>
+
     </div>
+
     <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="invetory.js"></script>
 
 </body>
-    <!-- Footer -->
-    <footer class="bg-light text-center py-3 mt-4">
-        <p>&copy; Information Technology - IT4 - University of Information and Communication</p>
-    </footer>
+
 </html>
