--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="layoutsmain.css">
+    <link rel="stylesheet" href="styleall.css">
+    <script src="script.js"></script>
   </head>
 <body>
     <!-- Khong dung lo go nua -->
@@ -68,13 +70,18 @@
             </div>
         </div>
     </div>
-
+    <!-- Dark mode -->
+    <label class="switch">
+      <input type="checkbox" id="darkModeToggle">
+      <span class="slider round"></span>
+    </label>
     <!-- Background Image -->
     <div class="container-fluid mt-4">
         <img src="https://media-cdn-v2.laodong.vn/Storage/NewsPortal/2023/6/2/1200009/01.-Tong-Quan-He-Tho.jpg" alt="Warehouse Background" class="img-fluid w-100">
     </div>
     
-    <main>
+      <main>
+        <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
         <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
           <div class="col-md-6 p-lg-5 mx-auto my-5">
             <h1 class="display-3 fw-bold">Tổng quan kho IMB</h1>
