--- a/NgocHoangBa/inventory.html
+++ b/NgocHoangBa/inventory.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lý kho</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    
     <!-- <link rel="stylesheet" href="styles.css"> -->
 
 </head>
 
-<body onload="renderListProduct()">
+<body onload="renderListProduct()" >
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">   
             <a class="navbar-brand" href="./warehousemain.html">Warehouse</a>
@@ -36,7 +37,7 @@
                             <li><a class="dropdown-item" href="inventory.html">Tồn kho</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Báo cáo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="register.html">Báo cáo</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Nhân sự</a></li>
                 </ul>
                 <div class="d-flex ms-auto">
@@ -186,6 +187,7 @@
 
     <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
     <script src="invetory.js"></script>
+
 
 </body>
 
