--- a/NgocHoangBa/report.html
+++ b/NgocHoangBa/report.html
@@ -7,7 +7,7 @@
     <title>Báo cáo</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
-<body>
+<body onload="renderChart()">
     <meta charset="utf-8">
 </head><nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">   
@@ -69,10 +69,20 @@
             <div class="tab-pane fade p-3" id="reportSection" role="tabpanel" aria-labelledby="report-tab">
             </div>
         </div>
-
+        <div>
+            <canvas id="myChart" width="400" height="200"></canvas>
+            <h2>Số lượng hàng hóa </h2>
+        </div>
+        <div>
+            <canvas id="khach" width="400" height="200"></canvas>
+            <h2>Số lượng hàng hóa </h2>
+        </div>
     </div>
+    
+    
     <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
     <script src="report.js"></script> </body>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.5/dist/chart.umd.min.js"></script>
 
 
     <!-- Footer -->
