--- a/NgocHoangBa/warehousemain.html
+++ b/NgocHoangBa/warehousemain.html
@@ -41,7 +41,7 @@
                             <li><a class="dropdown-item" href="inventory.html">Tồn kho</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Báo cáo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Nhân sự</a></li>
                 </ul>
                 <div class="d-flex ms-auto">
