--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -47,7 +47,14 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="personnel.html">Nhân sự</a></li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
+                          <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
+                          <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
+                          <li><a class="dropdown-item" href="phanquyen.html">Phân quyền</a></li>
+                          <li><a class="dropdown-item" href="nhansu.html">Tính lương</a></li>
+                          </ul>
+                      </li>
                 </ul>
                 <div class="d-flex ms-auto">
                     <!-- Register / Login Buttons -->
@@ -70,7 +77,7 @@
     </div>
     <!-- Dark mode -->
     <label class="switch">
-      <input type="checkbox" id="darkModeToggle">
+      <input type="text" id="username" placeholder="Enter your username">
       <span class="slider round"></span>
     </label>
     <!-- Background Image -->
