--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -77,7 +77,7 @@
     </div>
     <!-- Dark mode -->
     <label class="switch">
-      <input type="text" id="username" placeholder="Enter your username">
+      <input type="checkbox" id="darkModeToggle">
       <span class="slider round"></span>
     </label>
     <!-- Background Image -->
