--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -113,6 +113,8 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+
     <!-- Dark mode -->
     <label class="switch">
       <input type="checkbox" id="darkModeToggle">
@@ -248,5 +250,6 @@
     </footer>
     <!-- Bootstrap JS -->
     <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    
 </body>
 </html>
