--- a/NgocHoangBa/customer.html
+++ b/NgocHoangBa/customer.html
@@ -35,7 +35,7 @@
                             <li><a class="dropdown-item" href="inventory.html">Tồn kho</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="register.html">Báo cáo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Nhân sự</a></li>
                 </ul>
                 <div class="d-flex ms-auto">
