Y/c làm nội dung nằm trên ảnh nền

--- a/DiepVanDinh/inventory.html
+++ b/DiepVanDinh/inventory.html
@@ -7,6 +7,7 @@
     <title>Quản lý kho</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="styles.css"> -->
+     <link rel="stylesheet" href="styleall.css">
 
 </head>
 
@@ -48,15 +49,13 @@
                             </li>
                     </ul>
                     <div class="d-flex ms-auto">
-                       
-                    <!-- Register / Login Buttons -->
-                    <a href="register.html" class="btn btn-outline-primary me-2">Đăng ký</a>
-                    <a href="login.html" class="btn btn-outline-secondary">Đăng nhập</a>
-                </div>
-            </div>
+                        <!-- Register / Login Buttons -->
+                        <a href="warehousemain.html" class="btn btn-outline-primary me-2">Đăng xuất</a>
+                    </div>
         </div>
-    </nav>
-    </header>
+    </div>
+</nav>
+</header>
     <div class="container mt-5">
         <h1>Quản lý kho</h1>
 
