--- a/DiepVanDinh/register.html
+++ b/DiepVanDinh/register.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="register.css"> Your CSS file -->
     <script src="checkvalid.js"></script>
+    <link rel="stylesheet" href="styleall.css">
 </head>
 <body>
     <div class="d-flex ms-auto">
