--- a/DiepVanDinh/customer.html
+++ b/DiepVanDinh/customer.html
@@ -5,51 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lý khách hàng</title>
+    <link rel="stylesheet" href="stylecustomer.css">
+    <link rel="stylesheet" href="styleall.css">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css"> 
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">   
-                <a class="navbar-brand" href="./warehousemain.html">Warehouse</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
-                            <ul class="dropdown-menu" aria-labelledby="customerDropdown">
-                                <li><a class="dropdown-item" href="customer.html">Trong nước</a></li>
-                                <li><a class="dropdown-item" href="customer.html">Nước ngoài</a></li>
-                                <li><a class="dropdown-item" href="customer.html">Nội bộ</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Kho hàng</a>
-                            <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
-                                <li><a class="dropdown-item" href="inventory.html">Nhập kho</a></li>
-                                <li><a class="dropdown-item" href="inventory.html">Xuất kho</a></li>
-                                <li><a class="dropdown-item" href="inventory.html">Tồn kho</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nhansuDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
-                                <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
-                                <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
-                                <li><a class="dropdown-item" href="phanquyen.html">Phân quyền</a></li>
-                                <li><a class="dropdown-item" href="nhansu.html">Tính lương</a></li>
-                                </ul>
-                            </li>
-                    </ul>
-                    <div class="d-flex ms-auto">
-                       
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">   
+            <a class="navbar-brand" href="./warehousemain.html">Warehouse</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
+                        <ul class="dropdown-menu" aria-labelledby="customerDropdown">
+                            <li><a class="dropdown-item" href="customer.html">Trong nước</a></li>
+                            <li><a class="dropdown-item" href="customer.html">Nước ngoài</a></li>
+                            <li><a class="dropdown-item" href="customer.html">Nội bộ</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Kho hàng</a>
+                        <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
+                            <li><a class="dropdown-item" href="inventory.html">Nhập kho</a></li>
+                            <li><a class="dropdown-item" href="inventory.html">Xuất kho</a></li>
+                            <li><a class="dropdown-item" href="inventory.html">Tồn kho</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
+                          <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
+                          <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
+                          <li><a class="dropdown-item" href="phanquyen.html">Phân quyền</a></li>
+                          <li><a class="dropdown-item" href="nhansu.html">Tính lương</a></li>
+                          </ul>
+                      </li>
+                </ul>   
+                <div class="d-flex ms-auto">
                     <!-- Register / Login Buttons -->
-                    <a href="warehousemain.html" class="btn btn-outline-primary me-2">Đăng xuất</a>
+                    <a href="register.html" class="btn btn-outline-primary me-2">Đăng ký</a>
+                    <a href="login.html" class="btn btn-outline-secondary">Đăng nhập</a>
                 </div>
             </div>
         </div>
@@ -75,16 +75,94 @@
 
         <div class="tab-content" id="customerTabContent">
             <div class="tab-pane fade show active p-3" id="domestic" role="tabpanel" aria-labelledby="domestic-tab">
-                </div>
+                <form id="tnuoc">
+                    <div class="mb-3">
+                        <label for="customerCode" class="form-label">Mã khách hàng:</label>
+                        <input type="text" id="customerCode" name="customerCode" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="fullname" class="form-label">Họ tên:</label>
+                        <input type="text" id="fullname" name="fullname" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="contactNumber" class="form-label">Số điện thoại:</label>
+                        <input type="tel" id="contactNumber" name="contactNumber" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="gmail" class="form-label">Gmail:</label>
+                        <input type="email" id="gmail" name="gmail" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="address" class="form-label">Địa chỉ:</label>
+                        <textarea id="address" name="address" class="form-control" required></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="deliveryDate" class="form-label">Ngày giao hàng:</label>
+                        <input type="date" id="deliveryDate" name="deliveryDate" class="form-control" required>
+                    </div>
+                    <button type="button" class="btn btn-primary" onclick="trongnuoc()">Thêm</button>
+                </form>
+            </div>
             <div class="tab-pane fade p-3" id="international" role="tabpanel" aria-labelledby="international-tab">
-                </div>
+                <form id="nngoai">
+                    <div class="mb-3">
+                        <label for="customerCode" class="form-label">Mã khách hàng:</label>
+                        <input type="text" id="n1" name="customerCode" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="fullname" class="form-label">Họ tên:</label>
+                        <input type="text" id="n2" name="fullname" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="contactNumber" class="form-label">Số điện thoại:</label>
+                        <input type="tel" id="n3" name="contactNumber" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="gmail" class="form-label">Gmail:</label>
+                        <input type="email" id="n4" name="gmail" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="address" class="form-label">Địa chỉ:</label>
+                        <textarea id="n5" name="address" class="form-control" required></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="deliveryDate" class="form-label">Ngày giao hàng:</label>
+                        <input type="date" id="n6" name="deliveryDate" class="form-control" required>
+                    </div>
+                    <button type="button" class="btn btn-primary" onclick="nuocngoai()">Thêm</button>
+                </form>
+            </div>
             <div class="tab-pane fade p-3" id="internal" role="tabpanel" aria-labelledby="internal-tab">
-
+                <form id="nbo">
+                    <div class="mb-3">
+                        <label for="customerCode" class="form-label">Mã khách hàng:</label>
+                        <input type="text" id="b1" name="customerCode" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="fullname" class="form-label">Họ tên:</label>
+                        <input type="text" id="b2" name="fullname" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="contactNumber" class="form-label">Số điện thoại:</label>
+                        <input type="tel" id="b3" name="contactNumber" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="gmail" class="form-label">Gmail:</label>
+                        <input type="email" id="b4" name="gmail" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="address" class="form-label">Địa chỉ:</label>
+                        <textarea id="b5" name="address" class="form-control" required></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="deliveryDate" class="form-label">Ngày giao hàng:</label>
+                        <input type="date" id="b6" name="deliveryDate" class="form-control" required>
+                    </div>
+                    <button type="button" class="btn btn-primary" onclick="noibo()">Thêm</button>
+                </form>
             </div>
         </div>
     </div>
-
-    
 
  <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
  <script src="customer.js"></script>
