--- a/DiepVanDinh/dsnv.html
+++ b/DiepVanDinh/dsnv.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danh Sách Nhân Viên</title>
+    <link rel="stylesheet" href="styleall.css">
     <link rel="stylesheet" href="dsnv.css">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
