--- a/DiepVanDinh/nhansu.html
+++ b/DiepVanDinh/nhansu.html
@@ -6,6 +6,7 @@
     <title>Warehouse Management Dashboard</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="nhansu.css">
+    <link rel="stylesheet" href="styleall.css">
 </head>
 <body>
     <!-- Khong dung lo go nua -->
