--- a/DiepVanDinh/personnel.html
+++ b/DiepVanDinh/personnel.html
@@ -6,6 +6,7 @@
     <title>Warehouse Management Dashboard</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/product/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+    <link rel="stylesheet" href="styleall.css">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
 <body>
