--- a/DiepVanDinh/inventory.html
+++ b/DiepVanDinh/inventory.html
@@ -134,7 +134,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="importSupplier" class="form-label">Khách hàng:</label>
-                        <input type="text" id="exportSupplier" name="supplier" class="form-control" placeholder="Nhập nhà cung cấp" required>
+                        <input type="text" id="exportSupplier" name="supplier" class="form-control" placeholder="Tên khách hàng" required>
                     </div>
                     <div class="mb-3">
                         <label for="exportDate" class="form-label">Ngày xuất:</label>
