--- a/NgoXuanLoc/test1.html
+++ b/NgoXuanLoc/test1.html
@@ -15,10 +15,10 @@
             <ul>
                 <li><a href="test1.html" class="home">Home</a></li>
                 <li><a href="sanpham.html">Sản phẩm</a></li>
-                <li><a href="#">Đơn hàng</a></li>
-                <li><a href="#">Giỏ hàng</a></li>
-                <li><a href="#">Thanh toán</a></li>
-                <li><a href="#">Hỗ trợ khách hàng</a></li>
+                <li><a href="donhang.html">Đơn hàng</a></li>
+                <li><a href="giohang.html">Giỏ hàng</a></li>
+                <li><a href="thanhtoan.html">Thanh toán</a></li>
+                <li><a href="support.html">Hỗ trợ khách hàng</a></li>
             </ul>
         </nav>
         <nav>
