--- a/NgoXuanLoc/ao6.html
+++ b/NgoXuanLoc/ao6.html
@@ -9,16 +9,16 @@
 <body>
     <header>
         <div class="logo">
-            <a href="test.html"><img src="logokho.jpg" alt="Khong hien thi" class="logo-img"></a>
+            <a href="test1.html"><img src="logokho.jpg" alt="Khong hien thi" class="logo-img"></a>
         </div>
         <nav>
             <ul>
                 <li><a href="test1.html" class="home">Home</a></li>
-                <li><a href="#">Sản phẩm</a></li>
-                <li><a href="#">Đơn hàng của tôi</a></li>
-                <li><a href="#">Giỏ hàng</a></li>
-                <li><a href="#">Thanh toán</a></li>
-                <li><a href="#">Hỗ trợ khách hàng</a></li>
+                <li><a href="sanpham.html">Sản phẩm</a></li>
+                <li><a href="donhang.html">Đơn hàng</a></li>
+                <li><a href="giohang.html">Giỏ hàng</a></li>
+                <li><a href="thanhtoan.html">Thanh toán</a></li>
+                <li><a href="support.html">Hỗ trợ khách hàng</a></li>
             </ul>
         </nav>
         <nav>
