--- a/DiepVanDinh/inventory.html
+++ b/DiepVanDinh/inventory.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="styles.css"> -->
      <link rel="stylesheet" href="styleall.css">
+     <link rel="stylesheet" href="inventory.css">
 
 </head>
 
