--- a/DiepVanDinh/report.html
+++ b/DiepVanDinh/report.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Báo cáo</title>
-    <link rel="stylesheet" href="styleall.css">
+
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="inventory.css">
+
 </head>
 <body onload="renderChart()">
     </meta charset="utf-8">
