--- a/DiepVanDinh/customer.html
+++ b/DiepVanDinh/customer.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="stylecustomer.css">
     <link rel="stylesheet" href="styleall.css">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="inventory.css">
+
 </head>
 
 <body>
@@ -167,8 +169,5 @@
  <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
  <script src="customer.js"></script>
 </body>
-    <!-- Footer -->
-    <footer class="bg-light text-center py-3 mt-4">
-        <p>&copy; Information Technology - IT4 - University of Information and Communication</p>
-    </footer>
+
 </html>
