--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="layoutsmain.css">
-    <link rel="stylesheet" href="styleall.css">
+    <link rel="stylesheet" href="warehouse.css">
     <script src="script.js"></script>
   </head>
 <body>
@@ -131,7 +131,7 @@
         <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
           <div class="col-md-6 p-lg-5 mx-auto my-5">
             <h1 class="display-3 fw-bold">Tổng quan kho IMB</h1>
-            <h3 class="fw-normal text-muted mb-3">Quản lý, sử lý, trung chuyển hàng hóa của bạn một cách thuận tiện</h3>
+            <h3 class="fw-normal text-muted mb-3">Quản lý, xử lý, trung chuyển hàng hóa của bạn một cách thuận tiện</h3>
             <div class="d-flex gap-3 justify-content-center lead fw-normal">
               <a class="icon-link" href="#">
                 Tìm hiểu thêm
