--- a/DiepVanDinh/customer.html
+++ b/DiepVanDinh/customer.html
@@ -50,8 +50,7 @@
                 </ul>   
                 <div class="d-flex ms-auto">
                     <!-- Register / Login Buttons -->
-                    <a href="register.html" class="btn btn-outline-primary me-2">Đăng ký</a>
-                    <a href="login.html" class="btn btn-outline-secondary">Đăng nhập</a>
+                    <a href="warehousemain.html" class="btn btn-outline-primary me-2">Đăng xuất</a>
                 </div>
             </div>
         </div>
