fix khachhang and report

--- a/DiepVanDinh/customer.html
+++ b/DiepVanDinh/customer.html
@@ -90,7 +90,7 @@
                         <input type="tel" id="contactNumber" name="contactNumber" class="form-control" required>
                     </div>
                     <div class="mb-3">
-                        <label for="gmail" class="form-label">Gmail:</label>
+                        <label for="email" class="form-label">Email:</label>
                         <input type="email" id="gmail" name="gmail" class="form-control" required>
                     </div>
                     <div class="mb-3">
@@ -119,8 +119,8 @@
                         <input type="tel" id="n3" name="contactNumber" class="form-control" required>
                     </div>
                     <div class="mb-3">
-                        <label for="gmail" class="form-label">Gmail:</label>
-                        <input type="email" id="n4" name="gmail" class="form-control" required>
+                        <label for="email" class="form-label">Email:</label>
+                        <input type="email" id="n4" name="email" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="address" class="form-label">Địa chỉ:</label>
@@ -148,8 +148,8 @@
                         <input type="tel" id="b3" name="contactNumber" class="form-control" required>
                     </div>
                     <div class="mb-3">
-                        <label for="gmail" class="form-label">Gmail:</label>
-                        <input type="email" id="b4" name="gmail" class="form-control" required>
+                        <label for="email" class="form-label">Email:</label>
+                        <input type="email" id="b4" name="email" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="address" class="form-label">Địa chỉ:</label>
