--- a/DiepVanDinh/report.html
+++ b/DiepVanDinh/report.html
@@ -44,7 +44,7 @@
                         <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
                             <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
                             <li><a class="dropdown-item" href="dsnv.html">Phân quyền</a></li>
-                            <li><a class="dropdown-item" href="dsnv.html">Tính lương</a></li>
+                            <li><a class="dropdown-item" href="dsnv.html">Chấm công</a></li>
                         </ul>
                     </li>
             </ul>
