--- a/DiepVanDinh/dsnv.html
+++ b/DiepVanDinh/dsnv.html
@@ -42,9 +42,9 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nhansuDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
                                 <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
-                                <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
-                                <li><a class="dropdown-item" href="dsnv.html">Phân quyền</a></li>
-                                <li><a class="dropdown-item" href="dsnv.html">Tính lương</a></li>
+                                <li><a class="dropdown-item" href="dsnv.html#import-tab">Danh sách nhân viên</a></li>
+                                <li><a class="dropdown-item" href="dsnv.html#export-tab">Phân quyền</a></li>
+                                <li><a class="dropdown-item" href="dsnv.html#inventory-tab">Chấm công</a></li>
                                 </ul>
                             </li>
                     </ul>
