--- a/DiepVanDinh/register.html
+++ b/DiepVanDinh/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="register.css"> Your CSS file -->
+    <link rel="stylesheet" href="inventory.css">
     <script src="checkvalid.js"></script>
     <link rel="stylesheet" href="styleall.css">
 </head>
@@ -29,14 +29,6 @@
                 <input type="tel" class="form-control" id="phone" name="phone" placeholder="Enter phone number" required>
             </div>
             <div class="form-group">
-                <label for="password">Mật khẩu:</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
-            </div>
-            <div class="form-group">
-                <label for="confirm_password">Xác nhận mật khẩu:</label>
-                <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="Confirm password" required>
-            </div>
-            <div class="form-group">
                 <label>Giới tính:</label><br>
                 <input type="radio" id="male" name="gender" value="male">
                 <label for="male">Nam</label>
@@ -46,6 +38,14 @@
             <div class="form-group">
                 <label for="age">Tuổi:</label>
                 <input type="text" class="form-control" id="age" name="age" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Mật khẩu:</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <div class="form-group">
+                <label for="confirmPassword">Xác nhận mật khẩu:</label>
+                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
             </div>
             <button type="submit" class="btn btn-primary register-button">Đăng ký</button>
             <p class="register-link">Bạn đã có tài khoản rồi? <a href="login.html">Đăng nhập</a></p>
